k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: msc-de1-project
  labels:
    project: msc-de1-distributed-systems
